--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "topic5",
   "version": "1.0.0",
   "main": "server.js",
-  "start": "nodemon server.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,5 +18,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
+  },
+  "scripts": {
+    "start": "nodemon server.js"
   }
 }
